# geeky

./: .gitignore  README.md  analysis_options.yaml  firebase.json  firestore.indexes.json  firestore.rules  pubspec.yaml
backend/: .dockerignore  .env.example  .env.mobile-test  .gitignore  Dockerfile  Dockerfile.beat  Dockerfile.worker  README.md  docker-compose.yml  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/api/: router.py
backend/app/integrations/: firebase_client.py  gemini_client.py  redis_client.py
backend/app/models/: analytics.py  bookmark.py  chunk.py  common.py  concept.py  interaction.py  module.py  note.py  notification.py  processing_task.py  quiz.py  quiz_attempt.py  rag.py  recommendation.py  relationship.py  review_state.py  short.py  source.py  subscription.py  user.py
backend/app/repositories/: analytics_repo.py  base.py  bookmark_repo.py  chunk_repo.py  concept_repo.py  interaction_repo.py  module_repo.py  note_repo.py  notification_repo.py  processing_task_repo.py  quiz_attempt_repo.py  quiz_repo.py  relationship_repo.py  review_state_repo.py  short_repo.py  source_repo.py  user_repo.py
backend/app/services/: resilience.py
backend/app/utils/: math_utils.py
backend/app/workers/: celery_app.py  kg_tasks.py  lifecycle_tasks.py  pipeline_tasks.py  quiz_tasks.py  source_tasks.py  (+2 more)
backend/eval/: eval_shorts.py
backend/scripts/: deploy.sh  deploy_beat.sh  deploy_worker.sh  local_setup.sh  seed_data.sh  setup_gcp.sh
backend/tests/: conftest.py
(+392 files in other folders)
